# ev-battery-supplychain-ly

./: .env.truffle.example  .gitignore  COMPILATION_FIXES.md  COPY_FILES_INSTRUCTIONS.md  JS_CONVERSION_PLAN.md  MIGRATION_DECISION.md  QUICK_SECURITY_CHECK.md  README.md  SECURITY_TEST_SUMMARY.md  SECURITY_VERIFICATION_GUIDE.md  START_GANACHE.md  SUBSQUID_REMOVAL_SUMMARY.md  TESTING_CHECKLIST.md  VERIFICATION_TIMING_EXPLANATION.md  WIRING_STATUS.md  commit_message.txt  diagnose_verification_failures.md  package-lock.json  package.json  sage.txt  test_full_flow_step7.js  test_step5.ps1  test_step7_bug_fixes.md  test_verification_issues.html  truffle-config.js
contracts/: ProductEscrow.sol  ProductEscrow_Initializer.sol  ProductFactory.sol
docs/: API_REFERENCE.md  AUDITOR_GUIDE.md  DEPLOYMENT_GUIDE.md  Enhanced_Privacy_Features_Analysis.md  Evaluation_Update_Checklist.md  Feature2_Testing_Guide.md  New_Features_Implementation_Summary.md  Phase1_Purchase_TX_Hash_Commitment_Implementation.md  Phase1_Testing_Guide.md  desktop.ini  (+28 more)
zkp-backend/: Cargo.toml  TEST_SUMMARY.md  test_api_endpoint.ps1  test_binding_api.js  test_binding_api.sh  test_binding_tag.rs
zkp-backend/src/: lib.rs  main.rs
zkp-backend/src/zk/: bp_plus_pedersen.rs  mod.rs  pedersen.rs  txid_pedersen_proof.rs
zkp-backend/tests/: evaluation_bpplus_proof_generation.rs  evaluation_bpplus_proof_size.rs  evaluation_bpplus_proof_verification.rs  evaluation_proof_generation.rs  evaluation_proof_size.rs  evaluation_proof_verification.rs  test_bpplus_simple.rs  test_txid_commitment.rs  test_txid_commitment_api.rs
(+210 files in other folders)
