[package]
name    = "bulletproof-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# ─── ZKP tool-kits ────────────────────────────────────────────────────
bulletproofs           = { version = "4.0.0", default-features = false, features = ["yoloproofs", "std"] }
tari_bulletproofs_plus = { version = "0.4.1", default-features = false, features = ["std"] }

curve25519-dalek-ng = "4.1.1"      # classic BP
curve25519-dalek    = "4.2"        # BP⁺ (pulled by Tari crate, but list explicitly for clarity)
hex  = "0.4.3"
merlin = "3"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
subtle  = "2.5"
rand_core = "0.6"
sha2 = "0.10"
# ─── ark-works (drop these later if unused) ──────────────────────────
ark-ff              = "0.4"
ark-sponge          = "0.4.0-alpha"
ark-ed-on-bls12-381 = "0.4"
ark-relations       = "0.4.0"
ark-r1cs-std        = "0.4.0"

# ─── Web layer ───────────────────────────────────────────────────────
actix-web  = "4"
actix-cors = "0.6"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
